samples/_failures_safe/1761399136_3aae34_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb21a66f.c: In function ‘main’:
./samples/SAFE/__tmp_bb21a66f.c:142:5: error: expected expression at end of input
  142 |     if (
      |     ^~
./samples/SAFE/__tmp_bb21a66f.c:142:5: error: expected declaration or statement at end of input
